Extend #5372 BSTRP Check Box fix to all check boxes (#5421)
* Remove unused css declaration

* Improved readability

* Try to remove error throw by extra space somewhere

* undo extra space in textarea

* Fix login button

* cleanup inline styling

* clean up login modal

* Forgot a div

* Fix activity checkbox

* Fix checkboxes in subscribe

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -89,6 +89,7 @@ a .fa-white,
 
 .alert h2 {
   font-size:1.2em;
+  font-weight: 800;
 }
 
 .visible-print {
@@ -483,4 +484,8 @@ textarea, input {
     font-style: normal;
     font-weight: normal;
     text-decoration: inherit;
+}
+
+.form-grey {
+  color:#888;
 }
